Fixed scrolling issue and changed font size of article on mobile.

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -7,7 +7,9 @@
 
     font-family: 'Lucida Sans Unicode', 'Lucida Grande', sans-serif;
     
-    word-break: break-all;
+    word-break: normal;
+    
+    overflow-y: visible;
 }
 
 *:focus
@@ -15,9 +17,14 @@
     outline: none;
 }
 
-body
+body > div > div
 {
     overflow-y: hidden;
+}
+body > div > div.mobile
+{
+    overflow-y: visible;
+    overflow-x: hidden;
 }
 
 #app
@@ -819,8 +826,11 @@ a:active
 }
 #mobContent
 {
-    font-size: 14px;
     padding: 2%;
+}
+#mobContent p
+{
+    font-size: 36px;
 }
 
 #btnChangePage
